@@ -18,7 +18,9 @@ software-store (0.3.4) UNRELEASED; urgency=low
     - extend show_app() to take (appname, pkgname)
   * softwarestore/view/appview.py:
     - ensure correct icons for overlapping application names
-
+  * softwarestore/view/widgets/imagedialog.py:
+    - make the download fully threaded
+  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Sep 2009 12:28:13 +0200
 
 software-store (0.3.3) karmic; urgency=low
